# trunk

./: .gitmodules  CMakeLists.txt  build.sh  serial_protol.c
include/queue/: queue.h
include/sys/: sys_common.h
src/: app_main.c  main.c
